uploading some update file

--- a/Jumper.cbp
+++ b/Jumper.cbp
@@ -18,7 +18,7 @@
 			<Target title="Release">
 				<Option output="bin/Release/Jumper" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
@@ -41,33 +41,64 @@
 			<Add library="C:/Users/ELBACHIR/Documents/SDL2-2.0.16/lib/x86/SDL2_ttf.lib" />
 			<Add directory="C:/Users/ELBACHIR/Documents/SDL2-2.0.16/lib/x86" />
 		</Linker>
+		<Unit filename="AboutState.cpp" />
+		<Unit filename="AboutState.h" />
 		<Unit filename="AnimManger.h" />
+		<Unit filename="FontManager.cpp" />
+		<Unit filename="FontManager.h" />
 		<Unit filename="Game.cpp" />
 		<Unit filename="Game.h" />
 		<Unit filename="GameObject.h" />
 		<Unit filename="GameState.h" />
 		<Unit filename="GameStateMachine.cpp" />
 		<Unit filename="GameStateMachine.h" />
+		<Unit filename="GameUI.h" />
+		<Unit filename="GameUI_Button.h" />
+		<Unit filename="GameUI_Image.cpp" />
+		<Unit filename="GameUI_Image.h" />
+		<Unit filename="GameUI_Radio.h" />
+		<Unit filename="GameUI_Text.cpp" />
+		<Unit filename="GameUI_Text.h" />
+		<Unit filename="HelpState.cpp" />
+		<Unit filename="HelpState.h" />
 		<Unit filename="InputHandler.cpp" />
 		<Unit filename="InputHandler.h" />
+		<Unit filename="Items.h" />
 		<Unit filename="ListOfState.h" />
 		<Unit filename="LoaderParam.h" />
+		<Unit filename="MenuState.cpp" />
+		<Unit filename="MenuState.h" />
+		<Unit filename="OptionState.cpp" />
+		<Unit filename="OptionState.h" />
+		<Unit filename="PauseState.cpp" />
+		<Unit filename="PauseState.h" />
+		<Unit filename="Plateform.cpp" />
 		<Unit filename="Plateform.h" />
 		<Unit filename="PlayState.cpp" />
 		<Unit filename="PlayState.h">
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="Player.h" />
+		<Unit filename="SoundManager.cpp" />
+		<Unit filename="SoundManager.h" />
 		<Unit filename="TextureManager.cpp" />
 		<Unit filename="TextureManager.h" />
+		<Unit filename="Timer.cpp" />
+		<Unit filename="Timer.h" />
 		<Unit filename="Vector2D.h" />
+		<Unit filename="data.db" />
 		<Unit filename="listOfEntity.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="ressource.rc">
+			<Option compilerVar="WINDRES" />
+		</Unit>
+		<Unit filename="statState.cpp" />
+		<Unit filename="statState.h" />
 		<Extensions>
+			<lib_finder disable_auto="1" />
 			<code_completion />
 			<envvars />
 			<debugger />
-			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
